# happ3

./: CHANGELOG.md  Dockerfile  LICENSE  compose.yaml  happ3.cabal
app/: AppServer.hs  Coordinates.hs  Database.hs  Main.hs  Pages.hs  Types.hs
static/: manifest.json
