cabal-version:      3.0
name:               happ3

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            BSD-2-Clause

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Massimo Bortolato

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         massimobortolato@duck.com

-- A copyright notice.
-- copyright:
category:           Learning
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable happ3
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Coordinates
                      AppServer
                      Database
                      Types
                      Pages

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:   OverloadedStrings
                        , BlockArguments
                        , StrictData

    -- Other library packages from which modules are imported.
    build-depends:    wai-middleware-static
                    , lucid2 ^>= 0.0.20240424
                    , base ^>=4.18
                    , relude ^>=1.2
                    , time ^>=1.12
                    , aeson ^>=2.2
                    , scotty ^>=0.22
                    , postgresql-simple ^>=0.7.0
                    , wai ^>=3.2.4
                    , unliftio-core ^>=0.2.1
                    , resource-pool ^>=0.4.0

    mixins:           base hiding (Prelude)
                    , relude (Relude as Prelude)
                    , relude

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021
